Stubbed in dropdowns. Still having z-index issues in IE (looks like holy grail is tripping us up - need to investigate)

--- a/public/stylesheets/sass/core/design.sass
+++ b/public/stylesheets/sass/core/design.sass
@@ -31,6 +31,7 @@ div#wrapper
   padding= !outer_margin
   background= !body_bg_color !body_bg_image "repeat-x"
   overflow: hidden
+  z-index: 0 !important
 
 //
 // MASTHEAD
@@ -87,38 +88,107 @@ div#top_menu
       float: left
       padding: 0
       margin: 0
-      &.active
+      position: relative
+      &.active   
         padding-bottom= !menu_item_active_bump_height
         margin-bottom= -!menu_item_active_bump_height
         background= !menu_item_active_bump "no-repeat 50% 100%"
-      &:first-child a
+        &:hover
+          padding-bottom: 0
+          margin-bottom: 0
+          background: none transparent
+      &:first-child span.topnav a
         border-left: 1px solid
         border-color= !menu_border_color
-      span
+      span.topnav
         border: 0
-      a
-        display: block
-        //background: none
-        font-weight: 400
-        border-right: 1px solid
+        a
+          display: block
+          //background: none
+          font-weight: 400
+          border-right: 1px solid
+          border-color= !menu_border_color
+          color= !menu_fg_color
+          padding= !menu_item_padding
+          text-transform: capitalize
+          //background: blue
+          //border: 1px solid pink
+          &.active
+            color= !menu_item_active_fg_color
+            //color: pink
+            //font-weight: normal
+            background= !menu_item_active_background
+            //background: red
+            //border: 1px solid green
+            //&:hover
+            //  color= !menu_item_active_fg_color
+            //  font-weight: normal
+            //  background= !menu_item_active_background
+      ul
+        display: none
+        position: absolute
+        top: 2.4em
+        left: 0
+        background= !menu_item_active_fg_color
+        padding: 0.25em 0.5em
+        border: 1px solid
         border-color= !menu_border_color
-        color= !menu_fg_color
-        padding= !menu_item_padding
-        text-transform: capitalize
-        //background: blue
-        //border: 1px solid pink
-        &.active
-          color= !menu_item_active_fg_color
-          //color: pink
-          //font-weight: normal
-          background= !menu_item_active_background
-          //background: red
-          //border: 1px solid green
-          //&:hover
-          //  color= !menu_item_active_fg_color
-          //  font-weight: normal
-          //  background= !menu_item_active_background
-
+        width: 30em
+        z-index: 99
+        ul
+          border: 0 none transparent
+        li
+          float: none
+        a
+          border: 0 none transparent
+          color= !link_color
+        a.contribute
+          margin-left: 0
+          padding: 0 0 0 10px
+          font-weight: bold
+          color: #52972d
+          &:hover
+            color= !add_new_item_color
+        ul
+          width: auto
+          position: static
+        ul.side_list
+          a
+            padding: 4px 0
+        .small_icon
+          padding-left: 25px
+        li.leftcol
+          float: left
+          border-right= 1px solid !menu_border_color
+          width: 12em
+        li.rightcol
+          padding: 0 0 0 10px
+          margin: 0 0 0 12em
+          border-left= 1px solid !menu_border_color
+        ul.recent_pages a
+          padding: 4px 0
+      &:hover
+        ul
+          display: block
+    ul.people_dashboard
+      width: 210px
+      padding: 10px
+      div.people_list a img
+        padding: 5px
+    ul.groups_dashboard
+      li.leftcol
+        width: 50%
+      li.rightcol
+        margin-left: 50%
+      li.name_icon
+        padding: 4px 0 4px 36px
+        min-height: 36px
+    ul.networks_dashboard
+      width: 15em
+      li.name_icon
+        padding: 4px 0 4px 36px
+        min-height: 36px
+        
 
 //
 // BANNER
